Modified the training list

--- a/Offline-Stage/Batch-3/InitProcessing.ipynb
+++ b/Offline-Stage/Batch-3/InitProcessing.ipynb
@@ -561,10 +561,8 @@
         "              '/content/drive/My Drive/Power_flow_data/2010-09-05.csv',\n",
         "              '/content/drive/My Drive/Power_flow_data/2010-09-06.csv',\n",
         "              '/content/drive/My Drive/Power_flow_data/2010-09-07.csv',\n",
-        "              '/content/drive/My Drive/Power_flow_data/2010-09-08.csv'\n",
-        "             ]\n",
-        "\n",
-        "test = ['/content/drive/My Drive/Power_flow_data/2010-09-09.csv',\n",
+        "              '/content/drive/My Drive/Power_flow_data/2010-09-08.csv',\n",
+        "              '/content/drive/My Drive/Power_flow_data/2010-09-09.csv',\n",
         "              '/content/drive/My Drive/Power_flow_data/2010-09-10.csv',\n",
         "              '/content/drive/My Drive/Power_flow_data/2010-09-11.csv',\n",
         "              '/content/drive/My Drive/Power_flow_data/2010-09-12.csv',\n",
@@ -581,13 +579,13 @@
         "              '/content/drive/My Drive/Power_flow_data/2010-09-23.csv',\n",
         "              '/content/drive/My Drive/Power_flow_data/2010-09-24.csv',\n",
         "              '/content/drive/My Drive/Power_flow_data/2010-09-25.csv'\n",
-        "              ]"
+        "             ]"
       ],
       "metadata": {
         "cellView": "form",
         "id": "UazeX22qdp7T"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": []
     }
   ]
